--- a/contribution/lang/de.json
+++ b/contribution/lang/de.json
@@ -3069,6 +3069,20 @@
  	 	 	"eng": "Are you sure you want to abandon this quest?"
  	 	}
  	},
+ 	"sessionClosedScreen": {
+ 	 	"title": {
+ 	 	 	"trans": "Sie haben sich auf einem anderen Gerät angemeldet",
+ 	 	 	"eng": "You have logged in on another device"
+ 	 	},
+ 	 	"description": {
+ 	 	 	"trans": "Wenn Sie weiterhin auf diesem Gerät abspielen möchten, klicken Sie bitte wieder anschließen.",
+ 	 	 	"eng": "If you wish to continue playing on this device, please click reconnect."
+ 	 	},
+ 	 	"restartApp": {
+ 	 	 	"trans": "Verbinden Sie sich jetzt wieder",
+ 	 	 	"eng": "Reconnect Now"
+ 	 	}
+ 	},
  	"slider": {
  	 	"min": {
  	 	 	"trans": "Mindest",
@@ -6765,6 +6779,31 @@
  	 	 	],
  	 	 	"trans": "Beispiel eines ${tierName} Chatrahmens",
  	 	 	"eng": "example chat frame of ${tierName} Tier"
+ 	 	}
+ 	},
+ 	"forgotPasswordPage": {
+ 	 	"title": {
+ 	 	 	"trans": "Geben Sie Ihre E -Mail ein, das System sendet Ihnen eine E -Mail des Reset -Passworts an Sie",
+ 	 	 	"eng": "Enter your email, the system will send a reset password email to you"
+ 	 	},
+ 	 	"emailRequired": {
+ 	 	 	"trans": "E-Mail ist erforderlich",
+ 	 	 	"eng": "Email is required"
+ 	 	},
+ 	 	"sendEmail": {
+ 	 	 	"trans": "E-Mail senden",
+ 	 	 	"eng": "Send Email"
+ 	 	},
+ 	 	"emailSent": {
+ 	 	 	"vars": [
+ 	 	 	 	"email"
+ 	 	 	],
+ 	 	 	"trans": "Eine E -Mail mit Passwort Reset wurde an {E -Mail} gesendet",
+ 	 	 	"eng": "An password reset email has been sent to {email}"
+ 	 	},
+ 	 	"checkEmail": {
+ 	 	 	"trans": "Bitte überprüfen Sie Ihre E -Mails und befolgen Sie die Anweisungen, um das Passwort zurückzusetzen",
+ 	 	 	"eng": "Please check your email and follow the instructions to reset the password"
  	 	}
  	},
  	"sendCosmeticPage": {
