--- a/contribution/lang/id.json
+++ b/contribution/lang/id.json
@@ -3069,6 +3069,20 @@
  	 	 	"eng": "Are you sure you want to abandon this quest?"
  	 	}
  	},
+ 	"sessionClosedScreen": {
+ 	 	"title": {
+ 	 	 	"trans": "Anda telah masuk di perangkat lain",
+ 	 	 	"eng": "You have logged in on another device"
+ 	 	},
+ 	 	"description": {
+ 	 	 	"trans": "Jika Anda ingin terus bermain di perangkat ini, silakan klik Reconnect.",
+ 	 	 	"eng": "If you wish to continue playing on this device, please click reconnect."
+ 	 	},
+ 	 	"restartApp": {
+ 	 	 	"trans": "Terhubung kembali sekarang",
+ 	 	 	"eng": "Reconnect Now"
+ 	 	}
+ 	},
  	"slider": {
  	 	"min": {
  	 	 	"trans": "Min",
@@ -6765,6 +6779,31 @@
  	 	 	],
  	 	 	"trans": "Contoh bingkai obrolan dari Tier ${tierName} ",
  	 	 	"eng": "example chat frame of ${tierName} Tier"
+ 	 	}
+ 	},
+ 	"forgotPasswordPage": {
+ 	 	"title": {
+ 	 	 	"trans": "Masukkan email Anda, sistem akan mengirim email reset kata sandi kepada Anda",
+ 	 	 	"eng": "Enter your email, the system will send a reset password email to you"
+ 	 	},
+ 	 	"emailRequired": {
+ 	 	 	"trans": "Email diperlukan",
+ 	 	 	"eng": "Email is required"
+ 	 	},
+ 	 	"sendEmail": {
+ 	 	 	"trans": "Mengirim email",
+ 	 	 	"eng": "Send Email"
+ 	 	},
+ 	 	"emailSent": {
+ 	 	 	"vars": [
+ 	 	 	 	"email"
+ 	 	 	],
+ 	 	 	"trans": "Email reset kata sandi telah dikirim ke {email}",
+ 	 	 	"eng": "An password reset email has been sent to {email}"
+ 	 	},
+ 	 	"checkEmail": {
+ 	 	 	"trans": "Silakan periksa email Anda dan ikuti instruksi untuk mengatur ulang kata sandi",
+ 	 	 	"eng": "Please check your email and follow the instructions to reset the password"
  	 	}
  	},
  	"sendCosmeticPage": {
