--- a/contribution/lang/pt.json
+++ b/contribution/lang/pt.json
@@ -3069,6 +3069,20 @@
  	 	 	"eng": "Are you sure you want to abandon this quest?"
  	 	}
  	},
+ 	"sessionClosedScreen": {
+ 	 	"title": {
+ 	 	 	"trans": "Você fez login em outro dispositivo",
+ 	 	 	"eng": "You have logged in on another device"
+ 	 	},
+ 	 	"description": {
+ 	 	 	"trans": "Se você deseja continuar jogando neste dispositivo, clique em Reconectar.",
+ 	 	 	"eng": "If you wish to continue playing on this device, please click reconnect."
+ 	 	},
+ 	 	"restartApp": {
+ 	 	 	"trans": "Reconecte agora",
+ 	 	 	"eng": "Reconnect Now"
+ 	 	}
+ 	},
  	"slider": {
  	 	"min": {
  	 	 	"trans": "Min",
@@ -6978,6 +6992,31 @@
  	 	 	],
  	 	 	"trans": "Exemplo da moldura de bate-papo do nível ${tierName}",
  	 	 	"eng": "example chat frame of ${tierName} Tier"
+ 	 	}
+ 	},
+ 	"forgotPasswordPage": {
+ 	 	"title": {
+ 	 	 	"trans": "Digite seu e -mail, o sistema enviará um e -mail de senha de redefinição para você",
+ 	 	 	"eng": "Enter your email, the system will send a reset password email to you"
+ 	 	},
+ 	 	"emailRequired": {
+ 	 	 	"trans": "O email é necessário",
+ 	 	 	"eng": "Email is required"
+ 	 	},
+ 	 	"sendEmail": {
+ 	 	 	"trans": "Enviar email",
+ 	 	 	"eng": "Send Email"
+ 	 	},
+ 	 	"emailSent": {
+ 	 	 	"vars": [
+ 	 	 	 	"email"
+ 	 	 	],
+ 	 	 	"trans": "Um email de redefinição de senha foi enviado para {email}",
+ 	 	 	"eng": "An password reset email has been sent to {email}"
+ 	 	},
+ 	 	"checkEmail": {
+ 	 	 	"trans": "Verifique seu e -mail e siga as instruções para redefinir a senha",
+ 	 	 	"eng": "Please check your email and follow the instructions to reset the password"
  	 	}
  	},
  	"sendCosmeticPage": {
