--- a/contribution/lang/ar.json
+++ b/contribution/lang/ar.json
@@ -3069,6 +3069,20 @@
  	 	 	"eng": "Are you sure you want to abandon this quest?"
  	 	}
  	},
+ 	"sessionClosedScreen": {
+ 	 	"title": {
+ 	 	 	"trans": "لقد قمت بتسجيل الدخول على جهاز آخر",
+ 	 	 	"eng": "You have logged in on another device"
+ 	 	},
+ 	 	"description": {
+ 	 	 	"trans": "إذا كنت ترغب في متابعة اللعب على هذا الجهاز ، فيرجى النقر فوق Reconnect.",
+ 	 	 	"eng": "If you wish to continue playing on this device, please click reconnect."
+ 	 	},
+ 	 	"restartApp": {
+ 	 	 	"trans": "أعد الاتصال الآن",
+ 	 	 	"eng": "Reconnect Now"
+ 	 	}
+ 	},
  	"slider": {
  	 	"min": {
  	 	 	"trans": "دقيقة",
@@ -6765,6 +6779,31 @@
  	 	 	],
  	 	 	"trans": "This is an example chat frame of ${tierName} Tier",
  	 	 	"eng": "example chat frame of ${tierName} Tier"
+ 	 	}
+ 	},
+ 	"forgotPasswordPage": {
+ 	 	"title": {
+ 	 	 	"trans": "أدخل بريدك الإلكتروني ، سيقوم النظام بإرسال بريد إلكتروني لإعادة تعيين كلمة المرور إليك",
+ 	 	 	"eng": "Enter your email, the system will send a reset password email to you"
+ 	 	},
+ 	 	"emailRequired": {
+ 	 	 	"trans": "البريد الالكتروني مطلوب",
+ 	 	 	"eng": "Email is required"
+ 	 	},
+ 	 	"sendEmail": {
+ 	 	 	"trans": "ارسل بريد الكتروني",
+ 	 	 	"eng": "Send Email"
+ 	 	},
+ 	 	"emailSent": {
+ 	 	 	"vars": [
+ 	 	 	 	"email"
+ 	 	 	],
+ 	 	 	"trans": "تم إرسال بريد إلكتروني لإعادة تعيين كلمة المرور إلى {البريد الإلكتروني}",
+ 	 	 	"eng": "An password reset email has been sent to {email}"
+ 	 	},
+ 	 	"checkEmail": {
+ 	 	 	"trans": "يرجى التحقق من بريدك الإلكتروني واتبع الإرشادات لإعادة تعيين كلمة المرور",
+ 	 	 	"eng": "Please check your email and follow the instructions to reset the password"
  	 	}
  	},
  	"sendCosmeticPage": {
