--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -3069,6 +3069,20 @@
  	 	 	"eng": "Are you sure you want to abandon this quest?"
  	 	}
  	},
+ 	"sessionClosedScreen": {
+ 	 	"title": {
+ 	 	 	"trans": "別のデバイスにログインしています",
+ 	 	 	"eng": "You have logged in on another device"
+ 	 	},
+ 	 	"description": {
+ 	 	 	"trans": "このデバイスでの再生を続ける場合は、[再接続]をクリックしてください。",
+ 	 	 	"eng": "If you wish to continue playing on this device, please click reconnect."
+ 	 	},
+ 	 	"restartApp": {
+ 	 	 	"trans": "今すぐ再接続してください",
+ 	 	 	"eng": "Reconnect Now"
+ 	 	}
+ 	},
  	"slider": {
  	 	"min": {
  	 	 	"trans": "最小",
@@ -6979,6 +6993,31 @@
  	 	 	],
  	 	 	"trans": "${tierName} ティアのチャットフレーム",
  	 	 	"eng": "example chat frame of ${tierName} Tier"
+ 	 	}
+ 	},
+ 	"forgotPasswordPage": {
+ 	 	"title": {
+ 	 	 	"trans": "メールを入力すると、システムはリセットパスワードメールを送信します",
+ 	 	 	"eng": "Enter your email, the system will send a reset password email to you"
+ 	 	},
+ 	 	"emailRequired": {
+ 	 	 	"trans": "メールが必要です",
+ 	 	 	"eng": "Email is required"
+ 	 	},
+ 	 	"sendEmail": {
+ 	 	 	"trans": "メールを送る",
+ 	 	 	"eng": "Send Email"
+ 	 	},
+ 	 	"emailSent": {
+ 	 	 	"vars": [
+ 	 	 	 	"email"
+ 	 	 	],
+ 	 	 	"trans": "パスワードリセットメールが{電子メール}に送信されました",
+ 	 	 	"eng": "An password reset email has been sent to {email}"
+ 	 	},
+ 	 	"checkEmail": {
+ 	 	 	"trans": "メールを確認して、指示に従ってパスワードをリセットしてください",
+ 	 	 	"eng": "Please check your email and follow the instructions to reset the password"
  	 	}
  	},
  	"sendCosmeticPage": {
