--- a/contribution/lang/nl.json
+++ b/contribution/lang/nl.json
@@ -3069,6 +3069,20 @@
  	 	 	"eng": "Are you sure you want to abandon this quest?"
  	 	}
  	},
+ 	"sessionClosedScreen": {
+ 	 	"title": {
+ 	 	 	"trans": "U hebt aangemeld op een ander apparaat",
+ 	 	 	"eng": "You have logged in on another device"
+ 	 	},
+ 	 	"description": {
+ 	 	 	"trans": "Als u op dit apparaat wilt blijven spelen, klikt u op opnieuw verbinding maken.",
+ 	 	 	"eng": "If you wish to continue playing on this device, please click reconnect."
+ 	 	},
+ 	 	"restartApp": {
+ 	 	 	"trans": "Verbind nu opnieuw",
+ 	 	 	"eng": "Reconnect Now"
+ 	 	}
+ 	},
  	"slider": {
  	 	"min": {
  	 	 	"trans": "Min",
@@ -6765,6 +6779,31 @@
  	 	 	],
  	 	 	"trans": "Dit is een voorbeeld chat kader van ${tierName} Rang",
  	 	 	"eng": "example chat frame of ${tierName} Tier"
+ 	 	}
+ 	},
+ 	"forgotPasswordPage": {
+ 	 	"title": {
+ 	 	 	"trans": "Voer uw e -mail in, het systeem verzendt u een e -mail met reset wachtwoord naar u",
+ 	 	 	"eng": "Enter your email, the system will send a reset password email to you"
+ 	 	},
+ 	 	"emailRequired": {
+ 	 	 	"trans": "E -mail is vereist",
+ 	 	 	"eng": "Email is required"
+ 	 	},
+ 	 	"sendEmail": {
+ 	 	 	"trans": "Stuur e -mail",
+ 	 	 	"eng": "Send Email"
+ 	 	},
+ 	 	"emailSent": {
+ 	 	 	"vars": [
+ 	 	 	 	"email"
+ 	 	 	],
+ 	 	 	"trans": "Er is een wachtwoord opnieuw ingesteld e -mail verzonden naar {e -mail}",
+ 	 	 	"eng": "An password reset email has been sent to {email}"
+ 	 	},
+ 	 	"checkEmail": {
+ 	 	 	"trans": "Controleer uw e -mail en volg de instructies om het wachtwoord te resetten",
+ 	 	 	"eng": "Please check your email and follow the instructions to reset the password"
  	 	}
  	},
  	"sendCosmeticPage": {
