--- a/contribution/lang/pl.json
+++ b/contribution/lang/pl.json
@@ -3069,6 +3069,20 @@
  	 	 	"eng": "Are you sure you want to abandon this quest?"
  	 	}
  	},
+ 	"sessionClosedScreen": {
+ 	 	"title": {
+ 	 	 	"trans": "Zalogowałeś się na innym urządzeniu",
+ 	 	 	"eng": "You have logged in on another device"
+ 	 	},
+ 	 	"description": {
+ 	 	 	"trans": "Jeśli chcesz kontynuować grę na tym urządzeniu, kliknij ponownie połącz.",
+ 	 	 	"eng": "If you wish to continue playing on this device, please click reconnect."
+ 	 	},
+ 	 	"restartApp": {
+ 	 	 	"trans": "Ponownie połącz ponownie",
+ 	 	 	"eng": "Reconnect Now"
+ 	 	}
+ 	},
  	"slider": {
  	 	"min": {
  	 	 	"trans": "Min",
@@ -6765,6 +6779,31 @@
  	 	 	],
  	 	 	"trans": "To jest przykładowa ramka czatu z Rangą ${tierName}",
  	 	 	"eng": "example chat frame of ${tierName} Tier"
+ 	 	}
+ 	},
+ 	"forgotPasswordPage": {
+ 	 	"title": {
+ 	 	 	"trans": "Wpisz swój e -mail, system wyśle do Ciebie wiadomość e -mail z hasłem Resetuj",
+ 	 	 	"eng": "Enter your email, the system will send a reset password email to you"
+ 	 	},
+ 	 	"emailRequired": {
+ 	 	 	"trans": "email jest wymagany",
+ 	 	 	"eng": "Email is required"
+ 	 	},
+ 	 	"sendEmail": {
+ 	 	 	"trans": "Wysłać email",
+ 	 	 	"eng": "Send Email"
+ 	 	},
+ 	 	"emailSent": {
+ 	 	 	"vars": [
+ 	 	 	 	"email"
+ 	 	 	],
+ 	 	 	"trans": "E -mail z resetowaniem hasła został wysłany na {e -mail}",
+ 	 	 	"eng": "An password reset email has been sent to {email}"
+ 	 	},
+ 	 	"checkEmail": {
+ 	 	 	"trans": "Sprawdź swój e -mail i postępuj zgodnie z instrukcjami, aby zresetować hasło",
+ 	 	 	"eng": "Please check your email and follow the instructions to reset the password"
  	 	}
  	},
  	"sendCosmeticPage": {
