--- a/contribution/lang/cs.json
+++ b/contribution/lang/cs.json
@@ -4436,9 +4436,9 @@
  	 	 	 	"trans": "Zásobovací bedna [Gang]",
  	 	 	 	"eng": "Supply Crate [Gang]"
  	 	 	},
- 	 	 	"description": {
- 	 	 	 	"trans": "Obsahuje různé předměty a zdroje potřebné, aby gang zůstal funkční, \r\n         Klikněte na tlačítko Použít pro zaslání bedny na hlavní ústředí gangu",
- 	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional,\r\n        Click use to send it to your gang headquarters"
+ 	 	 	"descriptionv2": {
+ 	 	 	 	"trans": "Obsahuje miscovy položky a zdroje pro gang, aby zůstal funkční. \r\n         Lze použít ve svém ústředí gangu",
+ 	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional.\r\n        Can be used in your gang headquarters"
  	 	 	}
  	 	},
  	 	"clanExp": {
@@ -5760,6 +5760,17 @@
  	 	"cancel": {
  	 	 	"trans": "Jak synchronizovat čas zařízení?",
  	 	 	"eng": "How to sync device time?"
+ 	 	}
+ 	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Nepřesný čas zařízení (vypnuto ${diff}). Chcete -li zajistit správné zobrazení herních funkcí, jako je Buff. Synchňte svůj čas zařízení se sítí a zajistěte, aby byl váš čas nastaven správně",
+ 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
+ 	 	 	}
  	 	}
  	},
  	"dungeon": {
