--- a/contribution/lang/it.json
+++ b/contribution/lang/it.json
@@ -4436,9 +4436,9 @@
  	 	 	 	"trans": "Cassa di Rifornimento [Gang]",
  	 	 	 	"eng": "Supply Crate [Gang]"
  	 	 	},
- 	 	 	"description": {
- 	 	 	 	"trans": "Contiene oggetti e risorse varie che una gang necessita per rimanere operativa",
- 	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional,\r\n        Click use to send it to your gang headquarters"
+ 	 	 	"descriptionv2": {
+ 	 	 	 	"trans": "Contiene oggetti e risorse misc che una banda può rimanere funzionale. \r\n         Può essere usato nel quartier generale della tua banda",
+ 	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional.\r\n        Can be used in your gang headquarters"
  	 	 	}
  	 	},
  	 	"clanExp": {
@@ -5973,6 +5973,17 @@
  	 	"cancel": {
  	 	 	"trans": "Come sincronizzare il tempo del dispositivo?",
  	 	 	"eng": "How to sync device time?"
+ 	 	}
+ 	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Tempo di dispositivo impreciso (OFF di ${diff}). Per garantire correttamente funzionalità di gioco come il display Buff. Si prega di sincronizzare il tempo del dispositivo con la rete e assicurarsi che la zona temporale sia impostata correttamente",
+ 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
+ 	 	 	}
  	 	}
  	},
  	"dungeon": {
