--- a/contribution/lang/nl.json
+++ b/contribution/lang/nl.json
@@ -4436,9 +4436,9 @@
  	 	 	 	"trans": "Levering krat [bende]",
  	 	 	 	"eng": "Supply Crate [Gang]"
  	 	 	},
- 	 	 	"description": {
- 	 	 	 	"trans": "Bevat MISC-items en bronnen voor een bende om functioneel te blijven, \r\n         Klik op Gebruik om het naar je bende hoofdkwartier te sturen",
- 	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional,\r\n        Click use to send it to your gang headquarters"
+ 	 	 	"descriptionv2": {
+ 	 	 	 	"trans": "Bevat miscitems en bronnen voor een bende om functioneel te blijven. \r\n         Kan worden gebruikt in uw bendehoofdkwartier",
+ 	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional.\r\n        Can be used in your gang headquarters"
  	 	 	}
  	 	},
  	 	"clanExp": {
@@ -5760,6 +5760,17 @@
  	 	"cancel": {
  	 	 	"trans": "Hoe de tijd van het apparaat synchroniseren?",
  	 	 	"eng": "How to sync device time?"
+ 	 	}
+ 	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Onnauwkeurige apparaattijd (uit ${diff}). Om ervoor te zorgen dat gamefuncties zoals Buff correct worden weergegeven. Synchroniseer uw apparaattijd met netwerk en zorg ervoor dat uw tijdzone correct is ingesteld",
+ 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
+ 	 	 	}
  	 	}
  	},
  	"dungeon": {
