--- a/contribution/lang/pl.json
+++ b/contribution/lang/pl.json
@@ -4436,9 +4436,9 @@
  	 	 	 	"trans": "Skrzynia z Zaopatrzeniem [Gang]",
  	 	 	 	"eng": "Supply Crate [Gang]"
  	 	 	},
- 	 	 	"description": {
- 	 	 	 	"trans": "Zawiera różne przedmioty i zasoby dla gangu, aby utrzymać funkcjonalność przestępczą.\r\n        Kliknij użyj, aby wysłać do siedziby gangu.",
- 	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional,\r\n        Click use to send it to your gang headquarters"
+ 	 	 	"descriptionv2": {
+ 	 	 	 	"trans": "Zawiera różne elementy i zasoby, aby gang mógł pozostać funkcjonalny. \r\n         Może być używane w centrali gangu",
+ 	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional.\r\n        Can be used in your gang headquarters"
  	 	 	}
  	 	},
  	 	"clanExp": {
@@ -5760,6 +5760,17 @@
  	 	"cancel": {
  	 	 	"trans": "Jak zsynchronizować czas urządzenia?",
  	 	 	"eng": "How to sync device time?"
+ 	 	}
+ 	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Niedokładny czas urządzenia (wyłączony przez ${diff}). Aby upewnić się, że funkcje gry, takie jak Buff, wyświetlają prawidłowo. Zsynchronizuj czas urządzenia z siecią i upewnij się, że strefa czasu jest ustawiona poprawnie",
+ 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
+ 	 	 	}
  	 	}
  	},
  	"dungeon": {
