--- a/contribution/lang/sk.json
+++ b/contribution/lang/sk.json
@@ -4436,9 +4436,9 @@
  	 	 	 	"trans": "Dodávka prepravky [gang]",
  	 	 	 	"eng": "Supply Crate [Gang]"
  	 	 	},
- 	 	 	"description": {
- 	 	 	 	"trans": "Contains various items and resources for a gang to stay functional.\r\n        Click use to send it to your gang headquarters.",
- 	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional,\r\n        Click use to send it to your gang headquarters"
+ 	 	 	"descriptionv2": {
+ 	 	 	 	"trans": "Obsahuje rôzne položky a zdroje pre gang, ktorý zostane funkčný. \r\n         Sa dá použiť vo vašom ústredí gangov",
+ 	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional.\r\n        Can be used in your gang headquarters"
  	 	 	}
  	 	},
  	 	"clanExp": {
@@ -5973,6 +5973,17 @@
  	 	"cancel": {
  	 	 	"trans": "Ako synchronizovať čas zariadenia?",
  	 	 	"eng": "How to sync device time?"
+ 	 	}
+ 	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Nepresný čas zariadenia (vypnutý ${diff}). Zabezpečiť správne funkcie hry, ako je napríklad Buff Display. Synchronizujte čas svojho zariadenia so sieťou a uistite sa, že je váš časový zón nastavený správne",
+ 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
+ 	 	 	}
  	 	}
  	},
  	"dungeon": {
