--- a/contribution/lang/uk.json
+++ b/contribution/lang/uk.json
@@ -4436,9 +4436,9 @@
  	 	 	 	"trans": "Ящик ресурсів [Ватага]",
  	 	 	 	"eng": "Supply Crate [Gang]"
  	 	 	},
- 	 	 	"description": {
- 	 	 	 	"trans": "Містить різні речі і ресурси необхідні для функціонування ватаги.\r\n        Натисніть використати, щоб надіслати ящик до штабу ватаги.",
- 	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional,\r\n        Click use to send it to your gang headquarters"
+ 	 	 	"descriptionv2": {
+ 	 	 	 	"trans": "Містить різні предмети та ресурси для банди, щоб залишатися функціональними. \r\n         Можна використовувати у штаб -квартирі банди",
+ 	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional.\r\n        Can be used in your gang headquarters"
  	 	 	}
  	 	},
  	 	"clanExp": {
@@ -5961,6 +5961,17 @@
  	 	"cancel": {
  	 	 	"trans": "Як синхронізувати час пристрою?",
  	 	 	"eng": "How to sync device time?"
+ 	 	}
+ 	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Неточний час пристрою (вимкнено ${diff}). Щоб правильно забезпечити функції гри, такі як Buff Display. Будь ласка, синхронізуйте час пристрою з мережею та переконайтеся, що ваша часова зона встановлена правильно",
+ 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
+ 	 	 	}
  	 	}
  	},
  	"dungeon": {
