--- a/contribution/lang/vi.json
+++ b/contribution/lang/vi.json
@@ -4436,9 +4436,9 @@
  	 	 	 	"trans": "Hàng tiếp tế [Tập Đoàn]",
  	 	 	 	"eng": "Supply Crate [Gang]"
  	 	 	},
- 	 	 	"description": {
- 	 	 	 	"trans": "Chứa các vật phẩm và tài nguyên để một Tập Đoàn duy trì hoạt động.\n       Nhấp vào sử dụng để gửi nó đến trụ sở tập đoàn",
- 	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional,\r\n        Click use to send it to your gang headquarters"
+ 	 	 	"descriptionv2": {
+ 	 	 	 	"trans": "Chứa các mặt hàng và tài nguyên linh tinh cho một băng đảng để giữ chức năng. \r\n         Có thể được sử dụng trong trụ sở băng đảng của bạn",
+ 	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional.\r\n        Can be used in your gang headquarters"
  	 	 	}
  	 	},
  	 	"clanExp": {
@@ -5760,6 +5760,17 @@
  	 	"cancel": {
  	 	 	"trans": "Làm thế nào để đồng bộ hóa thời gian của thiết bị?",
  	 	 	"eng": "How to sync device time?"
+ 	 	}
+ 	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Thời gian thiết bị không chính xác (Tắt bởi ${diff}). Để đảm bảo các tính năng trò chơi như hiển thị Buff một cách chính xác. Vui lòng đồng bộ thời gian thiết bị của bạn với mạng và đảm bảo vùng thời gian của bạn được đặt chính xác",
+ 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
+ 	 	 	}
  	 	}
  	},
  	"dungeon": {
