--- a/contribution/lang/zh-CN.json
+++ b/contribution/lang/zh-CN.json
@@ -4436,9 +4436,9 @@
  	 	 	 	"trans": "补给箱[帮派]",
  	 	 	 	"eng": "Supply Crate [Gang]"
  	 	 	},
- 	 	 	"description": {
- 	 	 	 	"trans": "包含着维持帮派运行的杂物和资源， \r\n         点击将其发送给您的帮派总部",
- 	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional,\r\n        Click use to send it to your gang headquarters"
+ 	 	 	"descriptionv2": {
+ 	 	 	 	"trans": "包含MISC项目和资源，使帮派保持功能。 \r\n         可以在您的帮派总部使用",
+ 	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional.\r\n        Can be used in your gang headquarters"
  	 	 	}
  	 	},
  	 	"clanExp": {
@@ -5973,6 +5973,17 @@
  	 	"cancel": {
  	 	 	"trans": "如何同步设备时间？",
  	 	 	"eng": "How to sync device time?"
+ 	 	}
+ 	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
+ 	 	 	 	"trans": "不准确的设备时间（按${diff}关闭）。 确保游戏功能（例如buff显示正确）。 请将设备时间与网络同步，并确保正确设置您的时区",
+ 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
+ 	 	 	}
  	 	}
  	},
  	"dungeon": {
