--- a/contribution/lang/zh-TW.json
+++ b/contribution/lang/zh-TW.json
@@ -4436,9 +4436,9 @@
  	 	 	 	"trans": "補給箱[公會]",
  	 	 	 	"eng": "Supply Crate [Gang]"
  	 	 	},
- 	 	 	"description": {
- 	 	 	 	"trans": "包含一些公會所需的雜物和資源，以保持公會正常運作，\r\n         點擊使用來將其發送到你的公會總部",
- 	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional,\r\n        Click use to send it to your gang headquarters"
+ 	 	 	"descriptionv2": {
+ 	 	 	 	"trans": "包含MISC項目和資源，使幫派保持功能。 \r\n         可以在您的幫派總部使用",
+ 	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional.\r\n        Can be used in your gang headquarters"
  	 	 	}
  	 	},
  	 	"clanExp": {
@@ -5964,6 +5964,17 @@
  	 	"cancel": {
  	 	 	"trans": "如何同步設備時間？",
  	 	 	"eng": "How to sync device time?"
+ 	 	}
+ 	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
+ 	 	 	 	"trans": "您的裝置時間不準確（時差: ${diff}）。 確保遊戲功能例如buff顯示正確。 請將設備時間與網絡同步，並確保正確設置您的時區",
+ 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
+ 	 	 	}
  	 	}
  	},
  	"dungeon": {
