--- a/contribution/lang/ar.json
+++ b/contribution/lang/ar.json
@@ -4436,9 +4436,9 @@
  	 	 	 	"trans": "قفص العرض [عصابة]",
  	 	 	 	"eng": "Supply Crate [Gang]"
  	 	 	},
- 	 	 	"description": {
- 	 	 	 	"trans": "Contains various items and resources for a gang to stay functional.\r\n        Click use to send it to your gang headquarters.",
- 	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional,\r\n        Click use to send it to your gang headquarters"
+ 	 	 	"descriptionv2": {
+ 	 	 	 	"trans": "يحتوي على عناصر MISC والموارد للعصابة لتبقى وظيفية. \r\n         يمكن استخدامها في مقر العصابات الخاص بك",
+ 	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional.\r\n        Can be used in your gang headquarters"
  	 	 	}
  	 	},
  	 	"clanExp": {
@@ -5760,6 +5760,17 @@
  	 	"cancel": {
  	 	 	"trans": "كيفية مزامنة وقت الجهاز؟",
  	 	 	"eng": "How to sync device time?"
+ 	 	}
+ 	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
+ 	 	 	 	"trans": "وقت الجهاز غير الدقيق (OFF بمقدار ${diff}). لضمان ميزات اللعبة مثل عرض Buff بشكل صحيح. يرجى مزامنة وقت جهازك مع الشبكة والتأكد من تعيين منطقة الوقت الخاصة بك بشكل صحيح",
+ 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
+ 	 	 	}
  	 	}
  	},
  	"dungeon": {
