--- a/contribution/lang/es.json
+++ b/contribution/lang/es.json
@@ -4436,9 +4436,9 @@
  	 	 	 	"trans": "Caja de Suministros [Banda]",
  	 	 	 	"eng": "Supply Crate [Gang]"
  	 	 	},
- 	 	 	"description": {
- 	 	 	 	"trans": "Contiene Objetos variados y recursos para que la Banda permanezca funcional,\r\n        Úsala para enviarse automáticamente al Cuartel General de tu Banda",
- 	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional,\r\n        Click use to send it to your gang headquarters"
+ 	 	 	"descriptionv2": {
+ 	 	 	 	"trans": "Contiene elementos y recursos misceláneos para que una pandilla se mantenga funcional. \r\n         Se puede usar en su sede de pandillas",
+ 	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional.\r\n        Can be used in your gang headquarters"
  	 	 	}
  	 	},
  	 	"clanExp": {
@@ -5760,6 +5760,17 @@
  	 	"cancel": {
  	 	 	"trans": "¿Cómo sincronizar el tiempo del dispositivo?",
  	 	 	"eng": "How to sync device time?"
+ 	 	}
+ 	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Tiempo de dispositivo inexacto (apagado por ${diff}). Para garantizar las características del juego como la pantalla Buff correctamente. Sincrita el tiempo de su dispositivo con la red y asegúrese de que su zona de tiempo esté configurada correctamente",
+ 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
+ 	 	 	}
  	 	}
  	},
  	"dungeon": {
