--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -4436,9 +4436,9 @@
  	 	 	 	"trans": "[Gang] Caisse de ravitaillement",
  	 	 	 	"eng": "Supply Crate [Gang]"
  	 	 	},
- 	 	 	"description": {
- 	 	 	 	"trans": "Contient divers objets et ressources pour qu'un gang reste fonctionnel,\r\n        Clique sur utiliser pour l'envoyer au quartier général de ton gang",
- 	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional,\r\n        Click use to send it to your gang headquarters"
+ 	 	 	"descriptionv2": {
+ 	 	 	 	"trans": "Contient des articles et des ressources pour un gang pour rester fonctionnel. \r\n         Peut être utilisé dans le siège de votre gang",
+ 	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional.\r\n        Can be used in your gang headquarters"
  	 	 	}
  	 	},
  	 	"clanExp": {
@@ -5760,6 +5760,17 @@
  	 	"cancel": {
  	 	 	"trans": "Comment synchroniser le temps de l'appareil?",
  	 	 	"eng": "How to sync device time?"
+ 	 	}
+ 	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Temps de périphérique inexact (désactivé par ${diff}). Pour garantir correctement les fonctionnalités du jeu telles que l'affichage buff. Veuillez synchroniser le temps de votre appareil avec le réseau et assurez-vous que votre relais est réglé correctement",
+ 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
+ 	 	 	}
  	 	}
  	},
  	"dungeon": {
