--- a/contribution/lang/id.json
+++ b/contribution/lang/id.json
@@ -4436,9 +4436,9 @@
  	 	 	 	"trans": "Peti Suplai [Geng]",
  	 	 	 	"eng": "Supply Crate [Gang]"
  	 	 	},
- 	 	 	"description": {
- 	 	 	 	"trans": "Berisi barang dan sumber daya lain-lain agar geng tetap berjalan,\r\n        Klik untuk mengirimkan ke Markas Geng kamu",
- 	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional,\r\n        Click use to send it to your gang headquarters"
+ 	 	 	"descriptionv2": {
+ 	 	 	 	"trans": "Berisi barang -barang dan sumber daya misc agar geng tetap fungsional. \r\n         Dapat digunakan di kantor pusat geng Anda",
+ 	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional.\r\n        Can be used in your gang headquarters"
  	 	 	}
  	 	},
  	 	"clanExp": {
@@ -5760,6 +5760,17 @@
  	 	"cancel": {
  	 	 	"trans": "Bagaimana cara menyinkronkan waktu perangkat?",
  	 	 	"eng": "How to sync device time?"
+ 	 	}
+ 	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Waktu perangkat yang tidak akurat (mati dengan ${diff}). Untuk memastikan fitur game seperti tampilan buff dengan benar. Harap sinkronkan waktu perangkat Anda dengan jaringan dan pastikan zona waktu Anda diatur dengan benar",
+ 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
+ 	 	 	}
  	 	}
  	},
  	"dungeon": {
