--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -4436,9 +4436,9 @@
  	 	 	 	"trans": "支援クレート[ギャング]",
  	 	 	 	"eng": "Supply Crate [Gang]"
  	 	 	},
- 	 	 	"description": {
- 	 	 	 	"trans": "ギャングが機能を維持するための様々なアイテムや資源が入っている. \r\n         [使用]をクリックするとギャング本部に送信される",
- 	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional,\r\n        Click use to send it to your gang headquarters"
+ 	 	 	"descriptionv2": {
+ 	 	 	 	"trans": "ギャングが機能し続けるためのその他のアイテムとリソースが含まれています。 \r\n         ギャング本部で使用できます",
+ 	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional.\r\n        Can be used in your gang headquarters"
  	 	 	}
  	 	},
  	 	"clanExp": {
@@ -5974,6 +5974,17 @@
  	 	"cancel": {
  	 	 	"trans": "デバイスの時間を同期する方法は？",
  	 	 	"eng": "How to sync device time?"
+ 	 	}
+ 	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
+ 	 	 	 	"trans": "不正確なデバイス時間（${diff}でオフ）。 バフなどのゲーム機能が正しく表示されるようにするため。 デバイスの時間をネットワークと同期し、タイムゾーンが正しく設定されていることを確認してください",
+ 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
+ 	 	 	}
  	 	}
  	},
  	"dungeon": {
