--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -4436,9 +4436,9 @@
  	 	 	 	"trans": "보급 상자 [갱]",
  	 	 	 	"eng": "Supply Crate [Gang]"
  	 	 	},
- 	 	 	"description": {
- 	 	 	 	"trans": "갱단이 활동하기 위한 잡다한 아이템과 자원들이 들어 있습니다. \r\n         갱단 본부에서 '갱 자원 수집'을 통해 자원을 보낼 수 있습니다. (갱단에 가입되어 있어야 합니다)",
- 	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional,\r\n        Click use to send it to your gang headquarters"
+ 	 	 	"descriptionv2": {
+ 	 	 	 	"trans": "갱단이 기능을 유지하기위한 기타 항목과 리소스가 포함되어 있습니다. \r\n         갱 본부에서 사용할 수 있습니다",
+ 	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional.\r\n        Can be used in your gang headquarters"
  	 	 	}
  	 	},
  	 	"clanExp": {
@@ -5869,6 +5869,17 @@
  	 	"cancel": {
  	 	 	"trans": "장치 시간을 동기화하는 방법?",
  	 	 	"eng": "How to sync device time?"
+ 	 	}
+ 	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
+ 	 	 	 	"trans": "부정확 한 장치 시간 (${diff}에 의해 OFF). 버프 디스플레이와 같은 게임 기능이 올바르게 보장됩니다. 장치 시간을 네트워크와 동기화하고 시간대가 올바르게 설정되어 있는지 확인하십시오",
+ 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
+ 	 	 	}
  	 	}
  	},
  	"dungeon": {
