--- a/contribution/lang/pt.json
+++ b/contribution/lang/pt.json
@@ -4436,9 +4436,9 @@
  	 	 	 	"trans": "Caixa de Suprimentos [Gang]",
  	 	 	 	"eng": "Supply Crate [Gang]"
  	 	 	},
- 	 	 	"description": {
- 	 	 	 	"trans": "Contém itens e recursos diversos para que uma gangue permaneça funcional,\r\n        Clique em usar para enviar para a sede da sua gangue.",
- 	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional,\r\n        Click use to send it to your gang headquarters"
+ 	 	 	"descriptionv2": {
+ 	 	 	 	"trans": "Contém itens e recursos MISC para uma gangue permanecer funcional. \r\n         Pode ser usado na sede da sua gangue",
+ 	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional.\r\n        Can be used in your gang headquarters"
  	 	 	}
  	 	},
  	 	"clanExp": {
@@ -5973,6 +5973,17 @@
  	 	"cancel": {
  	 	 	"trans": "Como sincronizar o tempo do dispositivo?",
  	 	 	"eng": "How to sync device time?"
+ 	 	}
+ 	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Tempo impreciso do dispositivo (desligado por ${diff}). Para garantir recursos do jogo, como a exibição de buff corretamente. Por favor, sincronize o tempo do seu dispositivo com a rede e verifique se o seu tempo está definido corretamente",
+ 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
+ 	 	 	}
  	 	}
  	},
  	"dungeon": {
