--- a/contribution/lang/ro.json
+++ b/contribution/lang/ro.json
@@ -4436,9 +4436,9 @@
  	 	 	 	"trans": "Container de Aprovizionare [Gașcă]",
  	 	 	 	"eng": "Supply Crate [Gang]"
  	 	 	},
- 	 	 	"description": {
- 	 	 	 	"trans": "Conține diverse obiecte și resurse pentru a menține o gașcă funcțională,\r\n        Dă click pentru a o transmite Cartierului General al găștii tale",
- 	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional,\r\n        Click use to send it to your gang headquarters"
+ 	 	 	"descriptionv2": {
+ 	 	 	 	"trans": "Conține articole și resurse greșite pentru ca o bandă să rămână funcțională. \r\n         Poate fi folosit în sediul central al bandei",
+ 	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional.\r\n        Can be used in your gang headquarters"
  	 	 	}
  	 	},
  	 	"clanExp": {
@@ -5760,6 +5760,17 @@
  	 	"cancel": {
  	 	 	"trans": "Cum se sincronizează timpul dispozitivului?",
  	 	 	"eng": "How to sync device time?"
+ 	 	}
+ 	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Timpul dispozitivului inexact (oprit cu ${diff}). Pentru a asigura funcțiile jocului, cum ar fi afișarea buff. Vă rugăm să sincronizați timpul dispozitivului cu rețeaua și să vă asigurați că zona de timp este setată corect",
+ 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
+ 	 	 	}
  	 	}
  	},
  	"dungeon": {
