--- a/contribution/lang/ru.json
+++ b/contribution/lang/ru.json
@@ -4436,9 +4436,9 @@
  	 	 	 	"trans": "Ящик с припасами для банды",
  	 	 	 	"eng": "Supply Crate [Gang]"
  	 	 	},
- 	 	 	"description": {
- 	 	 	 	"trans": "Содержит ресурсы, необходимые банде для поддержания работоспособности,\r\n        Нажми использовать, чтобы отправить его в штаб-квартиру банды",
- 	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional,\r\n        Click use to send it to your gang headquarters"
+ 	 	 	"descriptionv2": {
+ 	 	 	 	"trans": "Содержит элементы MISC и ресурсы для банды, чтобы оставаться функциональными. \r\n         Можно использовать в штаб -квартире банды",
+ 	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional.\r\n        Can be used in your gang headquarters"
  	 	 	}
  	 	},
  	 	"clanExp": {
@@ -5760,6 +5760,17 @@
  	 	"cancel": {
  	 	 	"trans": "Как синхронизировать время устройства?",
  	 	 	"eng": "How to sync device time?"
+ 	 	}
+ 	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Неточное время устройства (от ${diff}). Чтобы гарантировать, что игры, такие как бафф -дисплей, правильно. Пожалуйста, синхронизируйте время вашего устройства с сетью и убедитесь, что ваша зона времени установлена правильно",
+ 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
+ 	 	 	}
  	 	}
  	},
  	"dungeon": {
