--- a/contribution/lang/th.json
+++ b/contribution/lang/th.json
@@ -4436,9 +4436,9 @@
  	 	 	 	"trans": "กล่องซัพพลาย [แก๊ง]",
  	 	 	 	"eng": "Supply Crate [Gang]"
  	 	 	},
- 	 	 	"description": {
- 	 	 	 	"trans": "มีรายการและทรัพยากรอื่น ๆ สำหรับแก๊งค์ที่ใช้งานได้ \r\n         คลิกใช้เพื่อส่งไปยังสำนักงานใหญ่แก๊งของคุณ",
- 	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional,\r\n        Click use to send it to your gang headquarters"
+ 	 	 	"descriptionv2": {
+ 	 	 	 	"trans": "มีรายการและทรัพยากรอื่น ๆ สำหรับแก๊งค์เพื่อให้ทำงานได้ \r\n         สามารถใช้ในสำนักงานใหญ่แก๊งค์ของคุณ",
+ 	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional.\r\n        Can be used in your gang headquarters"
  	 	 	}
  	 	},
  	 	"clanExp": {
@@ -5760,6 +5760,17 @@
  	 	"cancel": {
  	 	 	"trans": "วิธีการซิงค์เวลาอุปกรณ์?",
  	 	 	"eng": "How to sync device time?"
+ 	 	}
+ 	},
+ 	"time": {
+ 	 	"error": {
+ 	 	 	"systemTimeIncorrectMsg": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"diff"
+ 	 	 	 	],
+ 	 	 	 	"trans": "เวลาอุปกรณ์ที่ไม่ถูกต้อง (ปิดโดย ${diff}) เพื่อให้แน่ใจว่าคุณสมบัติของเกมเช่น Buff Display อย่างถูกต้อง โปรดซิงค์เวลาอุปกรณ์ของคุณกับเครือข่ายและตรวจสอบให้แน่ใจว่าโซนเวลาของคุณถูกตั้งค่าอย่างถูกต้อง",
+ 	 	 	 	"eng": "Inaccurate device time (off by ${diff}). to ensure game features such as buff display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
+ 	 	 	}
  	 	}
  	},
  	"dungeon": {
